2006-07-01  Mark Grebe  <markgrebe@yahoo.com>
* antic.[ch], ui.c: new style of artifacting


2006-06-29  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile, win32/msc/config.h, DOC/INSTALL:
  upgraded VC++ from 6.0 to 2005


2006-05-01  Piotr Fusik  <fox@scene.pl>
* util/act2html.*: replaced my old C program with a Perl script;
  the Perl script keeps hues from different palettes together
  which I think is better for palette comparisons

* util/colors.asx, util/colors.xex: Atari program that displays all 256 colors

* util/crlf.*, util/keyboard.txt, util/usage2html.pl: removed

* util/readme.txt: updated

* act/gray.act: 0x00,0x11,0x22,... instead of 0x00,0x10,0x20,...


2006-04-24  Piotr Fusik  <fox@scene.pl>
* util/sethdr.pl, util/sethdr.txt: removed; the script hasn't been updated
  for years (so it supported only half of current cartridge types),
  wasn't portable, etc. "Create Cartridge from ROM image" in the emulator
  basically does the job of the removed script.

* util/makebb.bat: removed; anyone who is serious about making a ROM image
  of "Bounty Bob Strikes Back 5200" by concatenating 3 files can read
  DOC/cart.txt


** 2.0.2 released on 2006-04-08

2006-04-08  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: map ATARI key to SDL_BACKQUOTE key as well (similarly to DOS
  port) since LSUPER key (the WINDOW key) is unusable in MS Windows (it
  opens up the Start menu).

* config.{guess,sub}: updated to version from 2006-02-23

* debian/*: update for new release. Fixes bugs in Debian BTS (#346876, #288543)

* atari800.{h,man},configure.ac,README*,atari800.spec: update for 2.0.2 release


2006-04-06  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: removed IR = 0 and anticmode = 0. Added a check to ignore JVB
  in the jump instruction instead.


2006-03-29  Perry McFarlane  <perry_m@fastmail.fm>
* atari_sdl.c, atari_ntsc.c: added command line options, help and rearranged
  code a bit in the NTSC emulator.
* DOC/USAGE updated for the NTSC emulator.